# SHiPGeoModel

./: CMakeLists.txt  README  calo.cfg  documentation.tex  geometry.db  remaining_concerns.txt  run.cfg  testADCs_digi.C  vis.cfg  vis.mac
exec/: digitise_calo.cpp  main_g4.cpp  make_db.cpp
include/: BarLayer.h  CaloSD.hh  CaloSysDigitiser.hh  CaloTypes.hh  CalorimeterBuilder.h  CalorimeterConfig.h  ConfigReader.h  DetectorConstruction.hh  EventAction.hh  EventStore.hh  Fibre_HPLayer.h  LeadPlateGeoPlugin.h  MaterialManager.h  PVTBarLayer.h  PrimaryGeneratorAction.hh  RunAction.hh  RunConfig.hh
src/: BarLayer.cpp  CaloSD.cc  CaloSysDigitiser.cc  CalorimeterBuilder.cpp  ConfigReader.cpp  DetectorConstruction.cc  EventAction.cc  EventStore.cc  Fibre_HPLayer.cpp  LeadPlateGeoPlugin.cpp  MaterialManager.cpp  PVTBarLayer.cpp  PrimaryGeneratorAction.cc  RunAction.cc  RunConfig.cc  main_g4.cpp  make_db.cpp
